# CiteMind

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  PRODUCT.md  README.md  citemind.db  dev.sh  docker-compose.yml  pyproject.toml  requirements-optional.txt  requirements.txt  skills.md
backend/: Dockerfile
backend/app/: main.py
backend/app/agent/: __init__.py  intent.py  planner.py  skills.py  state.py
backend/app/core/: config.py  rate_limit.py
backend/app/db/: database.py
backend/app/medical/: detector.py  explainer.py  extractor.py  grader.py  prompts.py  schemas.py
backend/app/models/: __init__.py  analysis_job.py  citation.py  contradiction.py  document.py  document_chunk.py  eval_result.py  medical_claim.py  query_log.py
backend/app/routes/: documents.py  evals.py  health.py  medical.py  query.py
backend/app/schemas/: __init__.py  document.py  eval.py  query.py
backend/app/services/: answer_generator.py  chunker.py  document_loader.py  embeddings.py  evaluator.py  llm_client.py  (+5 more)
docs/: BACKEND-FIX-PLAN.md  HANDOFF.md  POLISH-PLAN.md
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnswerCard.tsx  EvalCard.tsx  QueryPanel.tsx  UploadBox.tsx
frontend/lib/: demo-data.ts  medical-api.ts
sample_docs/: sample_ai_report.md
scripts/: capture_screens.mjs  demo_medcontradict.sh  eval_medcontradict.py
tests/medical/: test_detector.py  test_extractor.py  test_grader.py  test_pipeline_integration.py
(+13 files in other folders)
