[project]
name = "citemind-api"
version = "0.1.0"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "SQLAlchemy==2.0.36",
    "pydantic-settings==2.7.1",
    "psycopg2-binary==2.9.10",
    "python-multipart==0.0.20",
    "PyMuPDF==1.26.5",
]

[project.scripts]
app = "backend.app.main:app"
